# bank-marketing

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
app/: README.md  config.py  main.py  sidebar.py
app/app_utils/: artifacts.py  scoring.py  validation.py
app/components/: segmentation_chart.py
app/pages/: 01_Demographic_Profile.py  02_Financial_Profile.py  03_Previous_Campaign_Effectiveness.py  05_Customer_Segmentation.py  06_High_Impact_Customer_Profiles.py  07_Customer_Targeting.py  08_Modelling.py
app/viz/: charts.py
artifacts/models/: decision_tree_pipeline.joblib  logistic_regression_pipeline.joblib
data/demo/: demo_batch_customers.csv
data/processed/: bank-full-cleaned-processed-engineered.csv
documents/: ProjectProposal.md  Project_Setup_Guide.md  README_(week-1).md
notebooks/: 00_data_cleaning.ipynb  01_preprocessing.ipynb  02_features_engineering.ipynb  03_eda.ipynb  04_modeling.ipynb
scratch/: readme.md
scratch/cookiejars8/: analysis_based_teamfindings.md  cookiejars_financeprofile.ipynb  cookiejars_previouscampaign.ipynb
scratch/kateryna/: data_cleaning_and_eda.ipynb
scratch/kerensa/: Demographics_EDA.ipynb  Demographics_Questions_Results.md  SHAP.ipynb  segment_summary.md
scratch/lanlan/: prediction_analysis.ipynb
scratch/vince/: segmentation_prediction.ipynb
src/: config.py
src/pipelines/: data_cleaning.py  download_data.py  export_segmentation.py  process_data.py  run_all.py  train_models.py
src/utils/: data_manager.py  preprocessing.py  transforms.py
(+7 files in other folders)
